tests/typechecking/invalid/tuples_arrays/array_with_different_types.ml
let tableau = Array.create 5 3 in
    tableau.(0) <- 1;
    tableau.(1) <- 2.0